# yororen-ui-xp

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  README_zh_CN.md  THEMING.md
.agents/skills/trellis-brainstorm/: SKILL.md
.agents/skills/trellis-grill-me/: SKILL.md
.agents/skills/trellis-improve-codebase-architecture/: SKILL.md
.agents/skills/trellis-start/: SKILL.md
.agents/skills/trellis-tdd/: SKILL.md
.cargo/: .crates.toml  .crates2.json
.claude/agents/: trellis-check.md  trellis-code-architecture-review.md  trellis-code-review.md  trellis-implement.md  trellis-merge-review.md  trellis-research.md  trellis-spec-review.md
.claude/hooks/: inject-subagent-context.py  inject-workflow-state.py  session-start.py
.claude/skills/trellis-before-dev/: SKILL.md
.codex/: config.toml
.codex/hooks/: session-start.py
.github/workflows/: ci.yml  schema.yml
.trellis/: .template-hashes.json  config.yaml  workflow.md
.trellis/scripts/: trellis_switch.py
.trellis/scripts/common/: paths.py  task_store.py
.trellis/spec/guides/: code-examples.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/07-20-xp-notepad-demo/: prd.md  task.json
.trellis/workspace/wupengyu/: index.md  journal-1.md
codex-skills/yororen-ui-app-core/: SKILL.md
codex-skills/yororen-ui-app-core/agents/: openai.yaml
codex-skills/yororen-ui-app-core/references/: bootstrap-pattern.md
codex-skills/yororen-ui-recipes/: SKILL.md
codex-skills/yororen-ui-recipes/agents/: openai.yaml
codex-skills/yororen-ui-recipes/references/: custom-renderer.md  overlay-z-order.md
codex-skills/yororen-ui-state-inputs/: SKILL.md
codex-skills/yororen-ui-state-inputs/agents/: openai.yaml
codex-skills/yororen-ui-state-inputs/references/: input_loops.md
codex-skills/yororen-ui-user/: SKILL.md
codex-skills/yororen-ui-user/agents/: openai.yaml
codex-skills/yororen-ui-user/references/: three-layer-architecture.md
crates/yororen-ui/: Cargo.toml
crates/yororen-ui-brutalism-renderer/: Cargo.toml
crates/yororen-ui-brutalism-renderer/src/: lib.rs  style.rs
crates/yororen-ui-brutalism-renderer/themes/: brutalism-dark.json  brutalism-light.json
crates/yororen-ui-core/: Cargo.toml  build.rs
crates/yororen-ui-core/src/: hooks.rs  lib.rs
crates/yororen-ui-default-renderer/: Cargo.toml
crates/yororen-ui-default-renderer/src/: animation.rs  lib.rs  themes.rs
crates/yororen-ui-default-renderer/themes/: system-dark.json  system-light.json
crates/yororen-ui-demos/brutalism_renderer_demo/: Cargo.toml
crates/yororen-ui-demos/counter/: Cargo.toml
crates/yororen-ui-demos/file_browser/: Cargo.toml
crates/yororen-ui-demos/flavor_gallery/: Cargo.toml
crates/yororen-ui-demos/gallery_demo/: Cargo.toml
crates/yororen-ui-demos/gallery_xml/: Cargo.toml
crates/yororen-ui-demos/headless_demo/: Cargo.toml
crates/yororen-ui-demos/i18n_showcase/: Cargo.toml
crates/yororen-ui-demos/inputs_demo/: Cargo.toml
crates/yororen-ui-demos/layers_demo/: Cargo.toml
crates/yororen-ui-demos/mini_renderer_demo/: Cargo.toml
crates/yororen-ui-demos/xp_my_computer/: Cargo.toml
crates/yororen-ui-demos/xp_my_computer/src/: app.rs  main.rs  menu_data.rs
crates/yororen-ui-locale-ar/: Cargo.toml
crates/yororen-ui-locale-en/: Cargo.toml
crates/yororen-ui-locale-zh-CN/: Cargo.toml
crates/yororen-ui-mini-renderer/: Cargo.toml
crates/yororen-ui-mini-renderer/src/: lib.rs  renderers.rs
crates/yororen-ui-mini-renderer/themes/: mini-default.json
crates/yororen-ui-renderer/: Cargo.toml
crates/yororen-ui-renderer/src/: lib.rs
crates/yororen-ui-renderer/src/renderers/: mod.rs  theme_path.rs
crates/yororen-ui-renderer/src/theme/: mod.rs
crates/yororen-ui-renderer/themes/: system-dark.json  system-light.json
crates/yororen-ui-xml/: Cargo.toml  overrides.toml
crates/yororen-ui-xml-macro/: Cargo.toml
crates/yororen-ui-xml/fuzz/: Cargo.toml  README.md
crates/yororen-ui-xml/fuzz/fuzz_targets/: normalise_bool_attrs.rs
crates/yororen-ui-xp-renderer/: Cargo.toml
crates/yororen-ui-xp-renderer/src/: lib.rs  style.rs  window.rs
crates/yororen-ui-xp-renderer/src/renderers/: actions.rs  controls.rs  display.rs  inputs.rs  lists.rs  mod.rs  notifications.rs  overlays.rs  surfaces.rs
crates/yororen-ui-xp-renderer/themes/: xp-luna.json
demo/popover_placement/: Cargo.toml
screenshots/: README.md
scripts/: migrate-renderers.py  publish.sh  regen-public-api.sh
scripts/hooks/: pre-commit
src/component/: heading.rs  label.rs  modal.rs  popover.rs  progress.rs  slider.rs  toast.rs
src/theme/: tokens.rs
upstream/: README.md  yororen_ui.api.txt  yororen_ui_brutalism_renderer.api.txt  yororen_ui_core.api.txt  yororen_ui_default_renderer.api.txt  yororen_ui_mini_renderer.api.txt  yororen_ui_theme_catppuccin.api.txt  yororen_ui_theme_material.api.txt  yororen_ui_theme_system.api.txt
xp_css/: xp.css
xp_react/: dom.html
(+422 files in other folders)
