[workspace]
resolver = "2"
# Note: every `gpui = { package = "gpui-ce" ... }` dependency in this
# workspace points at a third-party fork of the upstream `gpui` crate
# (https://github.com/zed-industries/zed/tree/main/crates/gpui). The
# fork exposes the same public API but is published under a
# different name so a host app can pin to a specific version of
# the UI layer independently of the core zed gpui version. See
# `yororen-ui-core/Cargo.toml` for the canonical dep entry.
members = [
    "crates/yororen-ui",
    "crates/yororen-ui-core",
    "crates/yororen-ui-renderer",
    "crates/yororen-ui-locale-en",
    "crates/yororen-ui-locale-zh-CN",
    "crates/yororen-ui-locale-ar",
]
# Theme packages are temporarily excluded while the renderer
# migrates to the JSON-backed Theme. They are reintroduced as
# JSON files in the renderer crate (see W6).
exclude = [
    "crates/yororen-ui-demos",
    "crates/yororen-ui-theme-system",
    "crates/yororen-ui-theme-mini",
    "crates/yororen-ui-theme-catppuccin",
    "crates/yororen-ui-theme-material",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/MeowLynxSea/yororen-ui"

# Demos inherit workspace lints via `[lints] workspace = true` in each demo
# Cargo.toml. Strict clippy is enforced — fix issues instead of disabling.
