[package]
name = "yororen_ui_mini_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal demonstration renderer for yororen-ui. Reads only 2 colors from the theme JSON (themeColor + accentColor) and uses hardcoded geometry/padding for everything else. Use it as a reference for writing a 3rd-party renderer crate that does not depend on the rich token tree."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-default-renderer = { package = "yororen_ui_default_renderer", path = "../yororen-ui-default-renderer", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
serde_json = "1"
