[package]
name = "yororen_ui_xp_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows XP (Luna) style renderer for yororen-ui. Blue gradients, beveled borders, green segmented progress bars, Tahoma typography. Implements all 55 XxxRenderer traits as a complete alternative to the default renderer."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-default-renderer = { package = "yororen_ui_default_renderer", path = "../yororen-ui-default-renderer", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }

[dev-dependencies]
# `test-support` enables `gpui::test` / `TestAppContext`, used by
# the registry-completeness test.
gpui = { package = "gpui-ce", version = "0.3", features = ["test-support"] }

[lints]
workspace = true
